<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chuyen_so_tien"/>
    <EditText
        android:id="@+id/edtSoTien"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/wallet_hint"
        android:inputType="number"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chuyen_khoan_name"/>
    <EditText
        android:id="@+id/edtUS"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/chuyen_khoan_hint"/>
    <Button
        android:id="@+id/btnXacNhan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xac_nhan"/>
</LinearLayout>