<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LienKetNganHangActivity"
    android:background="@mipmap/app_background"
    android:orientation="vertical"
    android:padding="20dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:background="@drawable/layout_bg"
        android:layout_marginTop="20dp"
        android:padding="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/lien_ket_tai_khoan_ngan_hang"
            android:textSize="25sp"
            android:gravity="center"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"></TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/so_tai_khoan"
            android:textSize="20dp"></TextView>
        <EditText
            android:id="@+id/edtSoTK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/so_tai_khoan_hint"
            android:singleLine="true"
            android:layout_marginBottom="20dp"
            android:inputType="number"></EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ho_ten_chu_tk"
            android:textSize="20dp"></TextView>
        <EditText
            android:id="@+id/edtHoTenChuTK"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ho_ten_chu_tk_hint"
            android:singleLine="true"
            android:layout_marginBottom="20dp"></EditText>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ten_ngan_hang"
            android:textSize="20dp"></TextView>
        <EditText
            android:id="@+id/edtTenNganHang"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/ten_ngan_hang_hint"
            android:singleLine="true"
            android:layout_marginBottom="20dp"></EditText>

        <Button
            android:id="@+id/btnXacNhan"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/xac_nhan"
            android:textSize="20dp"
            android:background="@drawable/login_button"
            android:textAllCaps="false"
            android:layout_marginBottom="10dp"/>
        <Button
            android:id="@+id/btnBack"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:text="@string/Back"
            android:textSize="20dp"
            android:background="@drawable/login_button"/>
    </LinearLayout>
</LinearLayout>