<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OrderProccessingForSellerActivity"
    android:padding="20dp"
    android:background="@mipmap/app_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical"
            android:padding="10dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <ImageView
                    android:id="@+id/imgSP"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@mipmap/no_image_icon"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <TextView
                    android:id="@+id/txtTenSP"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ten_sp"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="2"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtSoLuongSP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_quantity"
                        android:textSize="20sp"
                        android:textStyle="bold"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/txtGiaSP"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/product_price"
                        android:textSize="20sp"
                        android:textColor="@color/red"
                        android:textStyle="bold" />
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">

                <TextView
                    android:id="@+id/txtHoTenNguoiMua"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/ho_ten_nguoi_mua"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/txtDiaChi"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dia_chi"
                    android:textSize="20dp"
                    android:layout_marginBottom="10dp"/>

                <TextView
                    android:id="@+id/txtLienHe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/so_dt"
                    android:textSize="20dp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/quy_trinh_xu_li"
                    android:textSize="20sp"
                    android:textStyle="bold"/>
                <CheckBox
                    android:id="@+id/cbProccessing"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:enabled="false"
                    android:text="@string/proccessing"/>
                <CheckBox
                    android:id="@+id/cbPacking"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/packing"
                    android:enabled="false"/>
                <CheckBox
                    android:id="@+id/cbDelivery"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/delivery"
                    android:enabled="false"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="right">

                <TextView
                    android:id="@+id/txtTongGiaTriDonHang"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_price"
                    android:textSize="25sp"
                    android:textColor="@color/red"
                    android:textStyle="bold" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">
                <Button
                    android:id="@+id/btnCancelOrder"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/huy_don"
                    android:textAllCaps="false"
                    android:layout_marginRight="30dp"/>
                <Button
                    android:id="@+id/btnBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Back"
                    android:textAllCaps="false"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>