<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@mipmap/bg1"

    tools:context=".RegistrationActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/registry_label"
        android:textSize="25sp"
        android:gravity="center"
        android:textStyle="bold"></TextView>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:orientation="vertical"
        android:padding="5dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="5"
            android:orientation="vertical"
            android:background="@drawable/layout_bg"
            android:layout_marginTop="10dp"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_username"
                android:textStyle="bold"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtUserName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registry_username"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/registry_name"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registry_name"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/registry_phone"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtSDT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registry_phone"
                android:inputType="number"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginBottom="20dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:text="@string/registry_gender"
                    android:textSize="20dp"></TextView>
                <androidx.appcompat.widget.AppCompatSpinner
                    android:id="@+id/spnGender"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/spn_gender">
                </androidx.appcompat.widget.AppCompatSpinner>
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/registry_address"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtDiaChi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registry_address"
                android:singleLine="true"
                android:layout_marginBottom="20dp"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/registry_password"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registry_password"
                android:singleLine="true"
                android:layout_marginBottom="20dp"
                android:password="true"></EditText>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/registry_confirm_pass"
                android:textSize="20dp"></TextView>
            <EditText
                android:id="@+id/edtPasswordConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/registry_confirm_pass"
                android:singleLine="true"
                android:password="true"
                android:layout_marginBottom="20dp"></EditText>

        </LinearLayout>
    </ScrollView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="2">
            <Button
                android:id="@+id/btnRegistry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_btn"
                android:backgroundTint="#FF6E40"
                android:textSize="17sp"></Button>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/registry_cancel"
                android:textSize="15dp"
                android:layout_marginRight="15dp"></TextView>
            <TextView
                android:id="@+id/txtRegistryReturn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registry_return"
                android:textSize="15dp"
                android:textColor="@android:color/black"></TextView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>